[package]
name = "async-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
parking_lot = "0.12.1"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
